Attempted to solve problem of analytics image not fitting properly

--- a/src/components/ProductHighlight/ProductHighlight.css
+++ b/src/components/ProductHighlight/ProductHighlight.css
@@ -45,13 +45,18 @@
     line-height: 40px;
 }
 
-.product-highlight-1 img.analytics-img {
-    display: block;
+.product-highlight-1 > .image-container {
     flex: 1;
     margin-top: -100px;
     width: 50%;
     height: auto;
     margin-left: 100px;
+}
+
+.product-highlight-1 img.analytics-img {
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 @media screen and (max-width: 1000px) {
@@ -86,13 +91,19 @@
         font-size: 1rem;
         line-height: 30px;
     }
-    .product-highlight-1 img.analytics-img {
+    .product-highlight-1 > .image-container {
         flex: 1;
         order: 1;
         padding: 0;
         width: 100%;
-        height: 150px;
-        margin: -120px auto 30px;
+        height: 100%;
+        margin: -80px auto 30px;
+    }
+    .product-highlight-1 img.analytics-img {
+       width: 100%;
+       height: 100%;
+       display: block;
+       margin: 0 auto;
     }
 }
 
